src/app/components/navigation/_index.scss
/*
 *  NAVIGATION
 *  Includes the site navigation and logo
 *
 */

html {
  .menu-no-js {
    display: block;

    li {
      display: inline-block;
      margin: 0 10px;

      a {
        display: block;
      }
    }
  }

  .navigation:before {
    display: none;
  }

  &.js .menu-no-js {
    display: none;

    .navigation:before {
      display: block;
    }
  }
}

.page-home {
  .navigation {
    visibility: hidden;

    &.active {
      visibility: visible;
    }
  }
}

$nav-height-small: 22px;
$nav-height-medium: 24px;
$nav-height-large: 32px;

.navigation {
  position: fixed;
  pointer-events: auto;
  top: 0;
  padding: 20px 0;
  right: 0;
  left: auto;
  z-index: 4000;
  display: flex;
  justify-content: space-between;
  align-items: center;

  &:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    background-color: $offWhite-semiTransparent;
    transition: all .2s linear;
  }

  .navigation-subpage-nav {
    position: relative;
    z-index: 9999;
    transition-delay: .32s;

    button {
      text-transform: uppercase;
      margin-left: 20px;
      padding-left: 30px;
      background-image: url('/images/icon-left-dark.svg');
      background-position: 0 50%;
      background-repeat: no-repeat;
      background-size: 20px auto;
      cursor: pointer;
      transition: all .2s linear;
    }
  }

  @media screen and (min-width: $bp-medium) {
    padding: 29px 0;
  }

  @media screen and (min-width: $bp-large) {
    padding: 27px 0;
  }

  &.notSticky {
    opacity: 0;
    pointer-events: none;
  }
}

.navigation-buttons {
  display: flex;
  z-index: 1;

  > div {
    pointer-events: none;
    display: flex;
    align-items: center;
    justify-content: center;
    float: left; // FIX FF?!
  }

  .svg-sequence {
    pointer-events: none;
  }
}

.navigation-logo {
  display: flex;
  overflow: visible;
  cursor: pointer;
  height: 40px;

  svg {
    pointer-events: none;
    fill: $offWhite;
    width: 112px;
    transition: fill .2s linear;
    height: $nav-height-small;
    width: 85px;

    @media screen and (min-width: $bp-medium) {
      height: $nav-height-medium;
      width: 92px;
    }
    @media screen and (min-width: $bp-large) {
      width: 112px;
      height: $nav-height-large;
    }
  }
}

.navigation-toggle {
  position: relative;
  margin: 0 18px 0 12px;
  cursor: pointer;
  height: 40px;

  @media screen and (min-width: $bp-smaller) {
    margin: 0 22px 0 14px;
  }
  @media screen and (min-width: $bp-medium) {
    margin: 0 26px 0 16px;
  }
}

.navigation-toggle-main {
  pointer-events: none;
  position: relative;
  z-index: 1;
  pointer-events: none; /* Fixes intermittent issue on touch devices? */
  border-radius: 50%;
  border: 2px solid $offWhite;
  width: $nav-height-small;
  height: $nav-height-small;
  box-sizing: content-box;
  transition: all .2s linear;

  &:before,
  &:after {
    content: "";
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 10px;
    height: 2px;
    background-color: $offWhite;
    transition: all .2s linear;
  }

  &:before {
    margin-top: -2px;
  }
  &:after {
    margin-top: 2px;
  }

  @media screen and (min-width: $bp-smaller) {
    width: $nav-height-medium;
    height: $nav-height-medium;

    &:before,
    &:after {
      width: 12px;
    }
  }

  @media screen and (min-width: $bp-large) {
    border: 3px solid $offWhite;
    width: $nav-height-large;
    height: $nav-height-large;

    &:before,
    &:after {
      height: 3px;
      width: 14px;
    }

    &:before {
      margin-top: -3px;
    }
    &:after {
      margin-top: 3px;
    }
  }
}

.navigation-toggle-ring {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 2;
  fill: $pot;
  // transition: all .2s ease-in-out;
  width: 40px;
  height: 40px;
  margin-left: -7px;
  margin-top: 0;

  @media screen and (min-width: $bp-smaller) {
    width: 42px;
    height: 42px;
    margin-left: -7px;
    margin-top: -1px;
  }

  @media screen and (min-width: $bp-large) {
    width: 56px;
    height: 56px;
    margin-left: -10px;
    margin-top: -9px;
  }
}

.navigation.home .navigation-toggle-ring {
  fill: $jeezz;
}

.navigation.work .navigation-toggle-ring {
  fill: $honey;
}

.navigation.events .navigation-toggle-ring {
  fill: $piglet;
}

.navigation.blog .navigation-toggle-ring {
  fill: $blu;
}

.navigation.join-us .navigation-toggle-ring {
  fill: $rain;
}

.navigation {
  &.invert,
  &.menuOpen,
  &.notOverHero {
    .navigation-logo svg {
      fill: $nonBlack;
    }
    .navigation-toggle-main {
      border-color: $nonBlack;

      &:before,
      &:after {
        background-color: $nonBlack;
      }
    }

    @media screen and (min-width: $bp-medium) {
      &:before {
        background-color: transparent;
      }
    }
  }

  &.menuOpen,
  &.default {
    .navigation-logo svg {
      fill: $offWhite;
    }
    .navigation-toggle-main {
      border-color: $offWhite;

      &:before,
      &:after {
        background-color: $offWhite;
      }
    }

    @media screen and (min-width: $bp-medium) {
      &:before {
        background-color: transparent;
      }
    }
  }

  &.default {
    &:before {
      background: linear-gradient(90deg, #333, #323952);
      opacity: 0.95;
    }
  }
  &.menuOpen {
    &:before {
      background: transparent !important;
    }
  }
}

@media screen and (min-width: $bp-medium) {
  .navigation {
    &,
    &.default {
      &:before {
        background: none;
      }
    }
  }
}

.navigation {
  &.menuOpen {
    &:before {
      background: none;
    }

    .navigation-toggle-main {
      &:before,
      &:after {
        margin-top: 0;
      }
      &:before {
        transform: translate(-50%, -50%) rotate(45deg);
      }
      &:after {
        transform: translate(-50%, -50%) rotate(-45deg);
      }
    }
    .navigation-toggle-ring {
      opacity: 0;
    }
    .navigation-subpage-nav {
      opacity: 0;
      transition: none;
      pointer-events: none;
    }
  }

  &.subPage.pageControls:not(.menuOpen) {
    left: 0;
    transition: all .2s linear;

    &.scrolled {
      &:before {
        background-color: $offWhite;
        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
      }
    }

    // Sure the following could be DRYier with the rest of the code
    &.ustwo-auto.subPage:not(.notOverHero) {
      .navigation-logo svg {
        fill: $offWhite;
      }
      .navigation-toggle-main {
        border-color: $offWhite;

        &:before,
        &:after {
          background-color: $offWhite;
        }
      }
      .navigation-subpage-nav button {
        color: $offWhite;
        background-image: url('/images/icon-left-light.svg');
      }
      &:before {
        background-color: transparent;
        box-shadow: none;
      }
    }
    // END

    &.default {

      &:before {
        background: $c-solid;
      }

      .navigation-subpage-nav button {
        color: $offWhite;
        background-image: url('/images/icon-left-light.svg');
      }
    }
  }

  &.notfound {
    &:before {
      display: none;
    }

    .navigation-logo svg {
      fill: $offWhite;
    }
    .navigation-toggle-main {
      border-color: $offWhite;

      &:before,
      &:after {
        background-color: $offWhite;
      }
    }
  }
}

